@@ -65,7 +65,7 @@ export(
 "%^%", "TitleRect","BarText","as.CDateFmt", "Phrase", "N", "BootCI", "VonNeumannTest",
 "Append","ConoverTest",
 
-"%()%","%(]%","%)(%","%)[%","%[)%","%[]%","%](%","%][%","%:%","TTestA",
+"%()%","%(]%","%)(%","%)[%","%[)%","%[]%","%](%","%][%","%:%","%::%","TTestA",
 "DecToBin", "RomanToInt", "TukeyBiweight","PtInPoly",
 "JonckheereTerpstraTest", "AndersonDarlingTest", "BarnardTest","HoeffD","Desc",
 "CountCompCases", "SplitAt",
