@@ -9,7 +9,8 @@ NEW FUNCTIONS ADDED:
   * MeanCIn() gives the required samplesize to obtain a confidence interval 
     of a given width.
   * Rank() is added at the expense of DenseRank() using a fast implementation in 
-    data.table, that allows ranking based on multiple columns.  
+    data.table, that allows ranking based on multiple columns. 
+  * %::% does the same as %:% but in greedy mode.  
 
 UPDATED FUNCTIONS:
   * RevCode() has been extended to process factors and logicals too. 
